[package]
name = "babyjubjub-ecdsa-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ff = {package="ff_ce" , version= "0.11", features = ["derive"]}
babyjubjub-rs = { git = "https://github.com/arnaucube/babyjubjub-rs.git" }
rand = "0.8"
num = "0.4"
num-bigint = {version = "0.4", features = ["rand"]}
num-traits = "0.2.8"
blake-hash = {version="0.4.0", optional=true}
poseidon-rs = "0.0.8"
lazy_static = "1.4.0"
blake = {version="2.0.1", optional=true}


[features]
default = ["blake-hash"]
aarch64 = ["blake"]